--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.App .content{
+  width: 66.67%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .sidebar{
+  text-align: center;
+  width: 33.33%;
+}
+
+.listCard{
+  display: flex;
+}
+
+.App input:focus{
+  background-color: rgb(198, 221, 243);
+  color: rgb(167, 36, 36);
 }
