--- a/src/assets/css/SuggestionCard.css
+++ b/src/assets/css/SuggestionCard.css
@@ -1,13 +1,12 @@
-.suggestion{
+/* .suggestion{
     max-width: 66.67%;
 }
 .Card{
     max-width: 33.33%;
     display: inline-block;
-    /* float: left; */
 }
 
 .suggestion .row{
     margin: 5px 10px;
     padding: 2px 5px;
-}
+} */
